# agpair

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  test-ping.txt
.firecrawl/: lody-zh-docs.md
.github/workflows/: ci.yml  release.yml
agpair/: __init__.py  config.py  delivery.py  mcp_server.py  models.py  runtime_conflicts.py  runtime_liveness.py  targets.py  terminal_receipts.py
agpair/cli/: __init__.py  agent_bus.py  app.py  claude.py  daemon.py  doctor.py  task.py  wait.py
agpair/daemon/: __init__.py  loop.py  process.py
agpair/executors/: __init__.py  antigravity.py  base.py  codex.py  gemini.py  local_cli.py
agpair/storage/: __init__.py  db.py  journal.py  receipts.py  schema.sql  tasks.py  waiters.py
agpair/tools/: __init__.py  install_agpair_daemon_launchd.py
agpair/transport/: __init__.py  bus.py  messages.py
companion-extension/: .vscodeignore  esbuild.js  package-lock.json  package.json
companion-extension/src/: extension.ts
docs/: agent-delegation-research.md  agpair-vnext-phase2-execution-plan.md  claude-code-integration.zh-CN.md  codex-controller-research.zh-CN.md  getting-started-zh.md  getting-started.en.md  postmortem-phantom-session-ids.md  remediation-antigravity-status-sync-and-isolated-worktrees.md  tech-debt-executor-reliability.md  tech-debt-serial-chain.md  usage.md  usage.zh-CN.md
docs/_internal/: README.md  agpair-cli-design.md  agpair-cli-implementation-plan.md  public-release-guide.md
skills/: claw.json
skills/Claude/: SKILL.md
skills/Codex/: SKILL.md
skills/agpair/: SKILL.md
tests/fixtures/: fake_agent_bus.py
tests/integration/: test_agent_bus_reserve_settle.py  test_claude_cli.py  test_cleanup.py  test_cli_help.py  test_completion_policy.py  test_daemon_codex_lifecycle.py  test_daemon_gemini_lifecycle.py  test_daemon_launchd.py  test_daemon_receipts.py  test_daemon_stuck_detection.py  test_delivery_id_dedupe.py  test_doctor.py  test_failure_modes.py  test_heartbeat_liveness.py  (+7 more)
(+39 files in other folders)
