[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agpair"
version = "1.0.0"
description = "Durable orchestration for AI coding workflows — task dispatch, structured receipts, recovery, and multi-executor lifecycle control"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.26,<2.0",
  "typer>=0.16,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
]

[project.scripts]
agpair = "agpair.cli.app:main"
agpair-mcp = "agpair.mcp_server:main"
agent-bus = "agpair.cli.agent_bus:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["agpair"]
